# fast-notes-api

./: CLAUDE.md  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  utils.py
alembic/: env.py
alembic/versions/: e79cadc01278_initial_tables.py
